# x_make_telemetry_vector_x

./: CHANGELOG.md  LICENSE  README.md  README.md_bak  __init__.py  mypy.ini  pyproject.toml  pyrightconfig.json  x_cls_make_telemetry_vector_x.py
scripts/: package_telemetry_vector.py
src/x_make_telemetry_vector_x/: __init__.py
src/x_make_telemetry_vector_x.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_telemetry_vector.py
